# pyisx

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  Makefile  README.md  contributing.html  examples.html  faq.html  genindex.html  index.html  install-poetry.sh  installation.html  mkdocs.yaml  objects.inv  overview.html  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.py
.doctrees/: contributing.doctree  environment.pickle  examples.doctree  faq.doctree  index.doctree  installation.doctree  overview.doctree  reference.doctree
.doctrees/examples/: readData.doctree  writeData.doctree
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: documentation.yml  main.yml  pypi.yml
_sources/: examples.md.txt  faq.md.txt  index.md.txt  installation.md.txt  overview.md.txt
docs/: INDEX.md  LICENSE.md  api.md  conf.py  contributing.md  contributing.rst  examples.rst  faq.md  ideas-objects.md  ideas_objects.md  index.md  index.rst  installation.md  installation.rst  installing.md  overview.md  overview.rst  reference.rst
docs/examples/: readData.md  readData.rst  writeData.md  writeData.rst
docs/how-to/: read-cellset.md  read-cellsets-footprint.md  read-cellsets-name.md  read-cellsets-num-cells.md  read-cellsets-status.md  read-cellsets-trace.md  read-movie-data-type.md  read-movie-frame.md  read-movie-spacing.md  read-movie-timing.md  version-number.md
docs/how_to/: read_cellset.md
docs/reference/: classes.md  functions.md
examples/: readData.html  writeData.html
isx/: __init__.py  _internal.py  algo.py  core.py  io.py  util.py
isx/test/: asserts.py  test_algos.py  test_core.py  test_file_io.py  test_file_metadata.py
isx/test/utilities/: create_sample_data.py  setup.py
jenkins/: pipeline.groovy
jenkins/deployment/linux/: Jenkinsfile
jenkins/deployment/mac/: Jenkinsfile
jenkins/deployment/windows/: Jenkinsfile
jenkins/development/linux/: Jenkinsfile
jenkins/development/mac/: Jenkinsfile
jenkins/development/windows/: Jenkinsfile
scripts/: check-git-clean.sh  setup  utils.sh
test/: asserts.py  test_algos.py  test_file_io.py  test_file_metadata.py
tests/: data.py  test_isx.py
