

[tool.poetry]
name = "py_isx"
version = "2023.11.21 "
description = " Python-based ISXD file reader "
authors = ["Srinivas Gorur-Shandilya <code@srinivas.gs>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.9"
beartype = ">=0.15.0"


[tool.poetry.group.test.dependencies]
pytest = ">=7.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.20.1"
debugpy = "1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79



[tool.interrogate]
fail-under = 100
exclude = ["setup.py", "docs", "build","tests"]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
color = true