

[tool.poetry]
name = "isx"
version = "2023.11.21 "
description = " Python-based ISXD file reader "
authors = ["Srinivas Gorur-Shandilya <code@srinivas.gs>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
beartype = ">=0.15.0"
numpy = ">=1.26.2"
mkdocs = "^1.4.2"
mkdocs-material-extensions = "^1.1.1"
mkdocs-mermaid2-plugin = "^0.6.0"
mkdocs-material = "^9.0.9"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.5"
pytest = { version = ">=7.2.0", optional = true }
coverage = { version = ">=7.3.2", optional = true }
ipykernel = { version = ">=6.20.1", optional = true }
debugpy = { version = "1.6", optional = true }
ideas-data = { git = "https://github.com/inscopix/ideas-data", rev = "2.0.0", optional = true }
matplotlib =  { version = ">=3.8.2", optional = true }




[tool.poetry.extras]
test = ["pytest", "coverage","ideas-data"]
dev = ["ipykernel", "debugpy","matplotlib"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79



[tool.interrogate]
fail-under = 100
exclude = ["setup.py", "docs", "build","tests"]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
color = true