

[tool.poetry]
name = "isx"
version = "0.0.0.dev"
description = "Python-based ISXD file reader"
authors = ["Srinivas Gorur-Shandilya <s.gorur_shandilya@bruker.com>", "Zachary Ip <Zachary.Ip@bruker.com>"]
maintainers = ["Zachary Ip <Zachary.Ip@bruker.com>"]
readme = "README.md"
license = "CC-BY-NC-4.0"
homepage = "https://github.com/inscopix/py_isx"
repository = "https://github.com/inscopix/py_isx"
documentation = "https://inscopix.github.io/py_isx/"


[tool.poetry.dependencies]
python = ">=3.9,<4.0"
beartype = ">=0.15.0"
numpy = ">=1.26.2"
importlib-metadata = "^7.0.1"
mkdocs = { version = "^1.4.2", optional = true }
mkdocs-material-extensions = { version = "^1.1.1", optional =true }
mkdocs-material = { version = "^9.0.9", optional = true }
mkdocstrings = { version = "^0.24.0", optional = true }
mkdocstrings-python = { version = "^1.7.5", optional = true }
pytest = { version = ">=7.2.0", optional = true }
ipykernel = { version = ">=6.20.1", optional = true }
debugpy = { version = "1.6", optional = true }
matplotlib =  { version = ">=3.8.2", optional = true }
poetry2setup = { version = "^1.1.0", optional = true }
requests = { version = "^2.31.0", optional = true }
mkdocs-git-revision-date-localized-plugin = { version = "^1.2.2", optional = true }
mkdocs-git-authors-plugin = { version = "^0.7.2", optional = true }


[tool.poetry.extras]
test = ["pytest","requests","poetry2setup"]
dev = ["ipykernel", "debugpy","matplotlib","poetry2setup"]
docs = ["mkdocs", "mkdocs-material-extensions", "mkdocs-material", "mkdocstrings" ,"mkdocstrings-python","mkdocs-git-revision-date-localized-plugin","mkdocs-git-authors-plugin"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
exclude = "setup.py"

[tool.interrogate]
fail-under = 100
exclude = ["setup.py", "docs", "build","tests"]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
color = true